--- a/day01-HTML-CSS/代码/HTML/02. 新浪新闻-标题-样式1.html
+++ b/day01-HTML-CSS/代码/HTML/02. 新浪新闻-标题-样式1.html
@@ -10,7 +10,7 @@
         h1 {
             /* color: red; */
             /* color: rgb(0, 0, 255); */
-            color: #4D4F53;
+            color: #d61747;
         }
     </style>
 
